force-app/main/default/objects/Quote/fields/Adjustable_Price__c.field-meta.xml
<CustomField>
    <fullName>Adjustable_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adjustable Price</label>
    <type>Checkbox</type>
</CustomField>