force-app/main/default/objects/Quote/fields/Adjustment_Period__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Period__c</fullName>
    <label>Adjustment Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At Invoicing</fullName>
            </value>
            <value>
                <fullName>Yearly on Contract Date</fullName>
            </value>
            <value>
                <fullName>Yearly on January 1st</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>