force-app/main/default/objects/Quote/fields/Approval_Open__c.field-meta.xml
<CustomField>
    <fullName>Approval_Open__c</fullName>
    <formula>Amount__c &gt; 5000
&amp;&amp;
TEXT( Approval_Status__c )&lt;&gt;&quot;Approved&quot;
&amp;&amp; 
TEXT( Approval_Status__c )&lt;&gt;&quot;Rejected&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Open</label>
    <type>Checkbox</type>
</CustomField>