force-app/main/default/objects/Quote/fields/ATAK_Project__c.field-meta.xml
<CustomField>
    <fullName>ATAK_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ATAK Project</label>
    <referenceTo>ATAK_Project__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>