force-app/main/default/objects/Quote/fields/ATAK_Project_Request_Comment__c.field-meta.xml
<CustomField>
    <fullName>ATAK_Project_Request_Comment__c</fullName>
    <label>ATAK Project Request Comment</label>
    <type>TextArea</type>
</CustomField>