force-app/main/default/objects/Quote/fields/ATAK_Project_Suggested_Name__c.field-meta.xml
<CustomField>
    <fullName>ATAK_Project_Suggested_Name__c</fullName>
    <formula>Type_Code__c &amp; &apos;_&apos; &amp; TEXT(Service_Package_Type__c) &amp; &apos;_&apos; &amp; QuoteAccount.Parent.Name &amp; &apos;_&apos; &amp; QuoteAccount.ShippingCity</formula>
    <label>ATAK Project Suggested Name</label>
    <type>Text</type>
</CustomField>