force-app/main/default/objects/Quote/fields/Commissioning_and_Framing__c.field-meta.xml
<CustomField>
    <fullName>Commissioning_and_Framing__c</fullName>
    <inlineHelpText>Per season</inlineHelpText>
    <label>Commissioning and Framing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>