force-app/main/default/objects/Quote/fields/Contract_Duration_in_years__c.field-meta.xml
<CustomField>
    <fullName>Contract_Duration_in_years__c</fullName>
    <label>Contract Duration (in years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>