force-app/main/default/objects/Quote/fields/Contract_Resiliation_Time__c.field-meta.xml
<CustomField>
    <fullName>Contract_Resiliation_Time__c</fullName>
    <inlineHelpText>for example: drie maanden</inlineHelpText>
    <label>Contract Resiliation Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>