force-app/main/default/objects/Quote/fields/Document_Language__c.field-meta.xml
<CustomField>
    <fullName>Document_Language__c</fullName>
    <label>Document Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language</valueSetName>
    </valueSet>
</CustomField>