force-app/main/default/objects/Quote/fields/End_Period__c.field-meta.xml
<CustomField>
    <fullName>End_Period__c</fullName>
    <label>End Period</label>
    <type>Date</type>
</CustomField>