force-app/main/default/objects/Quote/fields/Extra_Work__c.field-meta.xml
<CustomField>
    <fullName>Extra_Work__c</fullName>
    <label>Extra Work Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>