force-app/main/default/objects/Quote/fields/Implementation_Time__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Time__c</fullName>
    <label>Implementation Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>