force-app/main/default/objects/Quote/fields/Invoicing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Contact__c</fullName>
    <label>Invoicing Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>