force-app/main/default/objects/Quote/fields/Invoicing_Contact_Function__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Contact_Function__c</fullName>
    <label>Invoicing Contact Function</label>
    <length>100</length>
    <type>Text</type>
</CustomField>