force-app/main/default/objects/Quote/fields/Language_Code__c.field-meta.xml
<CustomField>
    <fullName>Language_Code__c</fullName>
    <formula>IF(Language__c=&apos;French&apos;, &apos;fr&apos;, &apos;nl&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Language Code</label>
    <type>Text</type>
</CustomField>