force-app/main/default/objects/Quote/fields/Manual_Snow_Removal__c.field-meta.xml
<CustomField>
    <fullName>Manual_Snow_Removal__c</fullName>
    <inlineHelpText>Per hour</inlineHelpText>
    <label>Manual Snow Removal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>