force-app/main/default/objects/Quote/fields/Mechanical_Unit_Placement__c.field-meta.xml
<CustomField>
    <fullName>Mechanical_Unit_Placement__c</fullName>
    <inlineHelpText>Fixed price</inlineHelpText>
    <label>Mechanical Unit Placement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>