force-app/main/default/objects/Quote/fields/Mechanical_Unit_Use__c.field-meta.xml
<CustomField>
    <fullName>Mechanical_Unit_Use__c</fullName>
    <inlineHelpText>Per hour</inlineHelpText>
    <label>Mechanical Unit Use</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>