force-app/main/default/objects/Quote/fields/Offer_Valid_For__c.field-meta.xml
<CustomField>
    <fullName>Offer_Valid_For__c</fullName>
    <label>Offer Validity (in months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>