force-app/main/default/objects/Quote/fields/Our_Reference__c.field-meta.xml
<CustomField>
    <fullName>Our_Reference__c</fullName>
    <label>Our Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>