force-app/main/default/objects/Quote/fields/Permanence_Fee__c.field-meta.xml
<CustomField>
    <fullName>Permanence_Fee__c</fullName>
    <inlineHelpText>Per season</inlineHelpText>
    <label>Permanence Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>