force-app/main/default/objects/Quote/fields/Place_Document_signature__c.field-meta.xml
<CustomField>
    <fullName>Place_Document_signature__c</fullName>
    <label>Place Document signature</label>
    <length>100</length>
    <type>Text</type>
</CustomField>