force-app/main/default/objects/Quote/fields/PO_NUmber__c.field-meta.xml
<CustomField>
    <fullName>PO_NUmber__c</fullName>
    <label>PO NUmber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>