force-app/main/default/objects/Quote/fields/Price_Request_Demand_Comments__c.field-meta.xml
<CustomField>
    <fullName>Price_Request_Demand_Comments__c</fullName>
    <label>Price Request Demand Comments</label>
    <type>TextArea</type>
</CustomField>