force-app/main/default/objects/Quote/fields/Salt_Delivery_and_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Salt_Delivery_and_Distribution__c</fullName>
    <inlineHelpText>Per turn</inlineHelpText>
    <label>Salt Delivery and Distribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>