force-app/main/default/objects/Quote/fields/Saturday_Rate__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Rate__c</fullName>
    <inlineHelpText>Per hour from 6h to 22h</inlineHelpText>
    <label>Saturday Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>