force-app/main/default/objects/Quote/fields/Signer_Function__c.field-meta.xml
<CustomField>
    <fullName>Signer_Function__c</fullName>
    <label>Signer Function</label>
    <length>200</length>
    <type>Text</type>
</CustomField>