force-app/main/default/objects/Quote/fields/Signer_Name__c.field-meta.xml
<CustomField>
    <fullName>Signer_Name__c</fullName>
    <label>Signer Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>