force-app/main/default/objects/Quote/fields/Signing_Date__c.field-meta.xml
<CustomField>
    <fullName>Signing_Date__c</fullName>
    <label>Signing Date</label>
    <type>Date</type>
</CustomField>