force-app/main/default/objects/Quote/fields/Signing_Status__c.field-meta.xml
<CustomField>
    <fullName>Signing_Status__c</fullName>
    <label>Signing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Send</fullName>
                <default>true</default>
                <label>Not Send</label>
            </value>
            <value>
                <fullName>Request send</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>