force-app/main/default/objects/Quote/fields/Smartscape_SLAs__c.field-meta.xml
<CustomField>
    <fullName>Smartscape_SLAs__c</fullName>
    <label>Smartscape SLAs</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>