force-app/main/default/objects/Quote/fields/Start_Period__c.field-meta.xml
<CustomField>
    <fullName>Start_Period__c</fullName>
    <label>Start Period</label>
    <type>Date</type>
</CustomField>