force-app/main/default/objects/Quote/fields/Tacit_Contract__c.field-meta.xml
<CustomField>
    <fullName>Tacit_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tacit Contract</label>
    <type>Checkbox</type>
</CustomField>