force-app/main/default/objects/Quote/fields/Travel_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Travel_Allowance__c</fullName>
    <inlineHelpText>Flat rate</inlineHelpText>
    <label>Travel Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>