force-app/main/default/objects/Quote/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extra Work</fullName>
            </value>
            <value>
                <fullName>Progress Statement</fullName>
            </value>
            <value>
                <fullName>Small Work</fullName>
            </value>
            <value>
                <fullName>Smartscape</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Winter Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>