force-app/main/default/objects/Quote/fields/Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Type_Code__c</fullName>
    <formula>CASE(
Type__c,
&quot;Smartscape&quot;, &quot;SMART&quot;,
&quot;Subscription&quot;, &quot;ABO&quot;,
&quot;Progress Statement&quot;, &quot;VS&quot;,
&quot;Extra Work&quot;, &quot;MW&quot;,
&quot;Small Work&quot;, &quot;KW&quot;,
&quot;&quot;
)</formula>
    <label>Type Code</label>
    <type>Text</type>
</CustomField>