force-app/main/default/objects/Quote/fields/Use_of_Mechanical_Snowplow__c.field-meta.xml
<CustomField>
    <fullName>Use_of_Mechanical_Snowplow__c</fullName>
    <inlineHelpText>Per day</inlineHelpText>
    <label>Use of Mechanical Snowplow</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>