force-app/main/default/objects/Quote/fields/Weekdays_Night_Work_Rate__c.field-meta.xml
<CustomField>
    <fullName>Weekdays_Night_Work_Rate__c</fullName>
    <inlineHelpText>Per hour from 22h to 24h and from 00h to 06h</inlineHelpText>
    <label>Weekdays Night Work Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>