force-app/main/default/objects/Quote/fields/Winter_Service_Price_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Winter_Service_Price_Adjustment__c</fullName>
    <inlineHelpText>free text in appropriate language (e.g. jaarlijks)</inlineHelpText>
    <label>Winter Service Price Adjustment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>