force-app/main/default/objects/Quote/recordTypes/B2B_Tender.recordType-meta.xml
<RecordType>
    <fullName>B2B_Tender</fullName>
    <active>true</active>
    <label>B2B Tender</label>
</RecordType>