force-app/main/default/objects/Quote/recordTypes/Public_Tender.recordType-meta.xml
<RecordType>
    <fullName>Public_Tender</fullName>
    <active>true</active>
    <label>Public Tender</label>
</RecordType>