force-app/main/default/objects/Quote/validationRules/ATAK_Project_needed_for_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>ATAK_Project_needed_for_Closed</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 ISBLANK(ATAK_Project__c ),
 ISPICKVAL(Status, &apos;Accepted&apos;) ,
  Opportunity.RecordTypeId = &apos;012KF000003QSlNYAW&apos;
)</errorConditionFormula>
    <errorMessage>Please reference an ATAK Project on the Opportunity before marking this Quote as Accepted.</errorMessage>
</ValidationRule>