force-app/main/default/objects/Quote/validationRules/Maximum_Value_for_Quick_Quote.validationRule-meta.xml
<ValidationRule>
    <fullName>Maximum_Value_for_Quick_Quote</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   RecordType.DeveloperName =&apos;Quick_Quote&apos;   ,
 Amount__c  &gt; 5000
)</errorConditionFormula>
    <errorMessage>You can&apos;t make a quick quote with a value superior to 5000€</errorMessage>
</ValidationRule>