force-app/main/default/objects/Quote/validationRules/Presented_only_when_Go.validationRule-meta.xml
<ValidationRule>
    <fullName>Presented_only_when_Go</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Status , &quot;Presented&quot;) ,
 Opportunity.Go_No_Go__c = false
)</errorConditionFormula>
    <errorMessage>You need to add a formal Go on the Opportunity before setting the Quote to Presented.</errorMessage>
</ValidationRule>